# kinova-ggcnn-unity

./: .gitignore  README.md
ggcnn-master-torch-new/: .gitignore  eval_ggcnn.py  initilizeTest.py  train_ggcnn.py
ggcnn-master-torch-new/models/: ggcnn2.py  yggcnn.py
ggcnn-master-torch-new/utils/data/: __init__.py  cornell_data.py  grasp_data.py  preprocess_yxh.py  yxh_data.py
ggcnn-master-torch-new/utils/dataset_processing/: evaluation.py  grasp.py  image.py
ggcnn-master/utils/dataset_processing/: generate_cornell_depth.py  image.py
ggcnn_kinova_grasping-master/: README.md
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/: run.sh
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/handle_dataset/: move_files.py
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/launch/: rs_camera.launch  wrist_camera.launch  wrist_camera_origin.launch
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/scripts/: joy_to_twist.py  kinova_closed_loop_grasp.py  moveit_cartesian_demo.py  run_ggcnn.py  run_ggcnn_pytorch.py  unity_full_control.py  unity_kinova_closed_loop_grasp.py  unity_kinova_closed_loop_grasp_fixed_target.py  unity_kinova_open_loop_grasp.py  unity_open_loop_grasp.py  unity_run_ggcnn.py  unity_run_ggcnn_pytorch.py
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/scripts/ggcnn_weights_cornell/: epoch_40  epoch_41_iou_0.54  epoch_41_iou_0.54_statedict.pt
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/scripts/helpers/: cv_bridge.py  get_target.py  gripper_action_client.py  position_action_client.py  transforms.py
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/scripts/models/: __init__.py  yggcnn.py
ggcnn_kinova_grasping-master/ggcnn_kinova_grasping/scripts/temporary/: depth_18.exr  depth_183.exr  depth_194.exr  depth_1963.exr  depth_230.exr  depth_2696.exr  depth_2698.exr  depth_2699.exr  depth_458.exr  depth_9.exr  draw.py  read_image.py  unity_run_pointcloud.py
kinova-ros-master/kinova_control/: CMakeLists.txt
kinova-ros-master/kinova_control/config/: j2n6s300_control.yaml  j2n6s300_control_position.yaml
kinova-ros-master/kinova_control/launch/: kinova_control.launch  kinova_control_position.launch
kinova-ros-master/kinova_control/src/: move_robot.py  move_robot_joints.py
kinova-ros-master/kinova_description/urdf/: j2n6s300_position.xacro  j2n6s300_standalone.xacro  j2n6s300_standalone_position.xacro  kinova_common_position.xacro  kinova_finger_set_position.xacro  kinova_position.gazebo  xxxxx.urdf
kinova-ros-master/kinova_gazebo/launch/: robot_launch.launch  robot_launch_position.launch
kinova-ros-master/kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova-ros-master/kinova_moveit/robot_configs/j2n6s300_moveit_config/: package.xml
kinova-ros-master/kinova_moveit/robot_configs/j2n6s300_moveit_config/config/: controllers_ros_control.yaml  kinematics_position.yaml
kinova-ros-master/kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: demo.launch  j2n6s300_gazebo_demo.launch  move_group.launch  move_group_j2n6s300.launch  moveit_rviz.launch  moveit_rviz_position.launch  planning_context_position.launch  unity_connect_close.launch  unity_connect_open.launch
kinova-ros-master/kinova_msgs/: CMakeLists.txt  package.xml
kinova-ros-master/kinova_msgs/scripts/: mover.py  server_endpoint.py  server_endpoint_close.py  trajectory_subscriber.py
kinova-ros-master/kinova_msgs/srv/: MoverService.srv
my_depth_image_proc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
my_depth_image_proc/include/depth_image_proc/: depth_conversions.h  depth_traits.h
my_depth_image_proc/src/nodelets/: convert_metric.cpp
niryo_moveit/config/: params.yaml
niryo_moveit/launch/: demo.launch  niryo_one_base.launch
niryo_moveit/scripts/: server_endpoint.py
ros_tcp_endpoint/: README.md
ros_tcp_endpoint/tcp_endpoint/src/tcp_endpoint/: RosPublisher.py  RosService.py  RosSubscriber.py  RosTCPClientThread.py  RosTCPServer.py
save_rgbd_from_kinect2/: CMakeLists.txt
save_rgbd_from_kinect2/.cache/clangd/index/: read_depth.cpp.8C9454286FE41740.idx  save_depth.cpp.0D85228D0656F015.idx  save_rgb.cpp.9074FBFB6A78FA0C.idx  save_rgbd.cpp.301BBF4C44FF7E62.idx
save_rgbd_from_kinect2/src/: read_depth.cpp  save_depth.cpp  save_rgb.cpp  save_rgbd.cpp
